Closed
Bug 201796
Opened 22 years ago
Closed 22 years ago
Cannot search the web with Google toolbar on OS X 10.1
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: gfllfg, Assigned: pgauriar)
References
Details
Attachments
(2 files, 1 obsolete file)
601 bytes,
text/plain
|
Details | |
4.72 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4b) Gecko/20030410 Chimera/0.7+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4b) Gecko/20030410 Chimera/0.7+
i use os x 10.1 and the google search toolbar does not search (i.e, go to the
list of results on google.com) when i press enter or return.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
the google search also does not work from text-only toolbar mode. only on 10.1
I concur with this bug. Using 10.1.5, and Camino nightlies (tried 2 so far)
Addition to my previous comment:
2003-04-14 19:41:34.461 Camino[5693] *** -[NSCFString
replaceOccurrencesOfString:withString:options:range:]: selector not recognized
2003-04-14 19:41:34.461 Camino[5693] Exception raised during posting of
notification. Ignored. exception: *** -[NSCFString
replaceOccurrencesOfString:withString:options:range:]: selector not recognized
This is given in the Console after hitting 'enter'.
Marking Confirmed per comment 2.
Assignee: saari → brade
Status: UNCONFIRMED → NEW
Component: General → Toolbars & Menus
Ever confirmed: true
QA Contact: winnie → sairuh
Comment 5•22 years ago
|
||
*** Bug 203403 has been marked as a duplicate of this bug. ***
Comment 6•22 years ago
|
||
same goes for search from the go menu... updating summary with wording used
there make this easier to find
Summary: Cannot search with Google toolbar on OS X 10.1 → Cannot search the web with Google toolbar on OS X 10.1
Assignee | ||
Comment 7•22 years ago
|
||
Oops. I guess we all forget to test for 10.1 compatibility on the initial
submission. Oh well, I think I've fixed it, but since I don't have 10.1, I'm
not sure. Essentially, the replaceOccurrencesOfString:withString:options:range:
method didn't exist in NSMutableString in Mac OS X 10.1. This manually does
that by going through the string and replacing every instance of %s or %d using
replaceCharactersInRange:withString:. Since I don't have 10.1, I need some
relatively thorough testing done by someone with access to 10.1.
Since the replacement is done manually, we have to make sure that %s and %d are
replaced properly. I'm going to attach a custom SearchURLList.plist file that
you should use to test. Test a normal string (you know, just about anything
you would usually type), with multiple %s and %d's intermingled with those
search terms. I've tested this with 10.2.5, but not 10.1.
Assignee | ||
Comment 8•22 years ago
|
||
Put this in Camino.app/Contents/Resources/English.lproj/
Search with every search engine, particularly the last one, SearchString Test.
Comment 9•22 years ago
|
||
prachi, we have a utility that does this in our string class for this very reason
- (NSString *)stringByReplacingCharactersInSet:(NSCharacterSet*)characterSet
withString:(NSString*)string
in NSString+Utils.h. Don't worry, this bit me a few weeks ago as well.
simon, don't we have a flag set that will warn when we call routines that are
only in the jaguar headers?
Comment 10•22 years ago
|
||
We do, but it just creates a warning that you'll probably ignore. Look in the
NSString.h header and you'll see it around that method.
Assignee | ||
Comment 11•22 years ago
|
||
I don't believe that the stringByReplacingCharactersInSet:withString: will work
in this case because we need to replace specific strings (@"%s" and @"%d").
Since the '%', 's', and 'd' characters are all valid in URLs, using a character
set won't help.
This is a new patch that still uses
replaceOccurrencesOfString:withString:options:range: if NSMutableString
responds to it. If not, we use an NSScanner to find %s and %d and replace
them. The code in this is cleaner than in the last one, and if we ever decide
to drop 10.1 support, we can just remove the NSScanner replacement code and
just use the NSMutableString methods.
Attachment #123572 -
Attachment is obsolete: true
Assignee | ||
Updated•22 years ago
|
Attachment #123730 -
Flags: review?(pinkerton)
Comment 14•22 years ago
|
||
landed w/ some cleanup
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 15•22 years ago
|
||
can someone with a 10.1 box do some testing on the 5/23/03 nightly and see if
this is really fixed. neither prachi nor i could test it.
Comment 16•22 years ago
|
||
Yeah, I'm running 10.1, and all three search tools work perfectly.
Updated•22 years ago
|
Attachment #123730 -
Flags: review?(pinkerton)
You need to log in
before you can comment on or make changes to this bug.
Description
•