don't use jaguar-only routines for search field (bug 201796)